Quality project phase 1: one action, one key, one answer
The foundation the other five features stand on. Three things that were
each written down twice, made into one thing each.

ONE DESCRIPTION OF AN ACTION. core/ui/TableActionSpec and TableActions:
seventy verbs with a stable id, a drawer, what they want pointed at, and
words to find them by. Pure - nothing in it knows what a card is. The ids
are the words the menus already use, so a verb's label key is the menu's
own and there is no second set of labels to fall out of step with the
first. langcheck now fails if a catalogue id has no menu string.

TableScreen.doAction(seat, id) is the one dispatcher. A key press, a mat
button, a menu row and later the palette and a tutorial step all arrive
there with the same string. It replaced three separate switches on
hardcoded GLFW constants.

ONE ANSWER TO "WHICH KEY". Sixteen verbs now have a real KeyMapping,
registered by both loaders from one shared list, in Minecraft's own
Controls screen. Defaults are exactly the keys that shipped, but they are
defaults now rather than the law: a keyboard that puts Q and E somewhere
else, or a player who already has E bound to something they care about
more, made the whole table unusable with nothing on any screen to fix it.

The mapping's name is the menu's translation key, so the Controls screen
and the card menu call a verb the same thing in every language. What the
menu prints beside a verb, what the F1 list prints, and what a tutorial
prompt will print are all asked of the binding when they are drawn -
rebind tap to Z and all three say Z. The menu used to print the literal
"E" from a hand-written map and the key list a different literal.

ONE PLACE THAT KNOWS WHAT A PLAYER CHOSE. ClientSettings grew from one
theme line into a versioned file: text and control scale apart from each
other, reduced motion, effect intensity, hold-versus-toggle inspect,
table sounds and volume, turn notification, and how long a request waits
before the